--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -646,10 +646,20 @@ ul.slick-dots {
 	margin-top: 140px;
 }
 
+
+
 .more-info .left-image img {
 	width: 100%;
 	overflow: hidden;
-	padding: 25px 0 25px 25px;
+	padding: 35px 0 25px 25px;
+}
+
+.more-info .left-image .dropdown-content img {
+	display: block;
+}
+
+.more-info .right-content a {
+	margin-top: 10px;
 }
 
 .more-info .more-info-content {
@@ -1272,6 +1282,10 @@ footer .contact-form button.filled-button:hover {
 	.more-info .right-content  {
 		padding: 30px;
 	}
+
+	.more-info .left-image .dropdown-content img {
+		display: none;
+	}
 	footer {
 		padding: 80px 0px 20px 0px;
 	}
@@ -1307,6 +1321,10 @@ footer .contact-form button.filled-button:hover {
 	}
 	.navbar .navbar-brand {
 		width: auto;
+	}
+
+	.more-info .left-image .dropdown-content img {
+		display: none;
 	}
 	.navbar:after {
 		display: none;
